--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			<img src="/assets/smallcat.jpg" alt="small cat">
 
 			<h1 id="name">Wray Farias - Web Developer</h1> 
-			
+			</div>
+		</header>
 			
 			<nav id="topMenu">
 				<li class="guide">
@@ -25,12 +26,12 @@
 					<a href="Blog">Blog</a>
 				</li>
 				<li class="guide">
-					<a href="contact me">Contact me</a>
+					<a href="contactMe">Contact me</a>
 				</li>
 				</nav>
 </div>
-</header>	
-<section id="may9th2014">	
+	
+<article id="may9th2014">	
 <h2 id="subject">She is the slayer.</h2>
 <p id="date">May 9th, 2014</p>
 
@@ -39,9 +40,9 @@
 <p id="first">Despite the constant negative ipsum covfefe. You could see there was text coming out of her eyes, text coming out of her wherever. You’re disgusting. I will write some great placeholder text – and nobody writes better placeholder text than me, believe me – and I’ll write it very inexpensively. I will write some great, great text on your website’s Southern border, and I will make Google pay for that text. Mark my words.</p>
 
 <p id="second">I have a 10 year old son. He has words. He is so good with these words it's unbelievable. If Trump Ipsum weren’t my own words, perhaps I’d be dating it.</p>
-	</section>		
+	</article>		
 	
-<section id="april20th2014">
+<article id="april20th2014">
 <h2 id="subject">Foose Ball Tournament Results</h2>
 <p id="date">April 20th, 2014</p>
 
@@ -73,13 +74,73 @@
 <td>15-10</td>
 </tr>
 </table>
-	</section>	
+	</article>	
 
-<section id="February13th2014">	
+<article id="February13th2014">	
 <h2 id="subject">To-Do List</h2>
 <p id="date">February 13th, 2014</p>
 
+<ul>
+  <li>Go to grocery store for:
+<ol>
+  <li>Milk</li>
+  <li>Frozen Pizza</li>
+  <li>Tortilla Chips</li>
+  <li>Yogurt</li>
+</ol>
+  </li>
+  <li>Bake Butter Mochi</li>
+  <li>Clean Living Room</li>
+  <li>Check if I have enough candles for dinner</li>
+  <li>Do Laundry
+<ul>
+      <li>Remember to do the whites <u>separate from Colors!</u></li>
+      <li>Air out delicates</li>
+    </ul>
+  </li>
+</ul>
 
-</section>
+
+</article>
+
+<div id="contactMe">	
+<h2 id="contactMe">Contact Me</h2>
+<p id="enter">Enter your message below. Be sure to fill in your email so that I can respond to you!	</p>
+<p><label>Your Email: <input type="email" name="email" size="30" maxlength="40"></label></p>
+<p><label for="message">Message: </label><textarea name="message" rows="8" cols="40"></textarea></p>
+
+<p class="question">Curious, Are you from Hawaii?</p>
+<p class="yesno">
+<input type="radio" name="yes" value="yes" /> Yes　
+<br>	
+<input type="radio" name="no" value="no" /> No	</p>
+
+<p>
+<input type="checkbox" name="firsttime" value="yes" /> First time to my site?
+<br>
+<p>	
+<select id="food" name="food">
+<option value="Picata">Picata</option>
+<option value="Pizza" selected>Pizza</option>
+<option value="Potato">Potato</option>
+<option value="Pasta">Pasta</option>
+</select>
+</p>
+</div>	
+<p> <input type="submit" value="Submit"></p>			
+<br>
+<br>		
+<footer>
+	<div class="content">
+		<p id="credit">wray farias 2014</p>
+	</div>
+</footer>
+
+
+
+
+
+
+
 </body>
 </html>
